Spacing corrected

--- a/style.css
+++ b/style.css
@@ -278,8 +278,6 @@ html {
   color: #2b2b2b;
   font-feature-settings: "liga" 1, "clig" 1, "calt" 1;
   font-variant-ligatures: common-ligatures contextual;
-  margin-top: -100px;
-
 }
 
 .timeline {
@@ -287,6 +285,7 @@ html {
   margin-left: 2rem;
   padding-left: 2rem;
   border-left: 2px solid #aaa; /* jaśniejszy szary */
+  margin-top: -70px;
 }
 
 
@@ -333,6 +332,7 @@ html {
   padding: 5rem 2rem;
   max-width: 900px;
   margin: 0 auto;
+  margin-top: -150px;
 }
 
 
@@ -344,6 +344,7 @@ html {
   gap: 2rem;
   max-width: 1200px;
   margin: 0 auto;
+  margin-top: -70px;
 }
 
 .place-card {
@@ -389,6 +390,7 @@ html {
   text-align: left;
   max-width: 900px;
   margin: 0 auto;
+  margin-top: -70px;
 }
 
 
@@ -398,6 +400,7 @@ html {
   background-color: #fff;
   padding: clamp(1rem, 4vw, 2rem);
   box-shadow: 0 4px 12px rgba(0,0,0,0.05);
+  margin-top: -70px;
 }
 
 .contact-section {
@@ -405,6 +408,7 @@ html {
   max-width: 900px;
   margin: 0 auto;
   text-align: left;
+  margin-top: -70px;
 }
 
 .section-subtitle {
@@ -499,6 +503,7 @@ mask-image: linear-gradient(to bottom,
   font-size: clamp(14px, 2.4vw, 20px);
   margin-bottom: 1.5rem;
   line-height: 1.6;
+  margin-top: -30px;
 }
 
 .highlighted {
